--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -3,11 +3,41 @@
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+h1{
+	text-align: center;
+	color: #111; 
+	font-family: 'Helvetica Neue', sans-serif; 
+	font-size: 80px; 
+	font-weight: bold; 
+	letter-spacing: -1px; 
+	line-height: 1; 
+	text-align: center;
+	
+}
 
+h3 { color: #111; 
+font-family: 'Open Sans', sans-serif; 
+font-size: 30px; 
+font-weight: 300; 
+line-height: 32px; 
+text-align: left; }
 
+.achtergrondkleur{
+	background-color:white;
+	background:rgba(255,255,255,0.85);
+	padding: 50px;
+}
 
+html {
+  font-family: sans-serif;
+  -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+ 
 
-body {
+}
+
+body { 
+	background-color:transparent;
 
 
 
@@ -18,13 +48,7 @@ p {
 }
 
 
-h1 {
-	
-}
 
-h3 {
-	
-}
 
 form {
 	
